feat(companynews): add new content on companyNews page

--- a/src/i18n/locales/id/contactUs.json
+++ b/src/i18n/locales/id/contactUs.json
@@ -42,18 +42,22 @@
   "October": "October",
   "November": "November",
   "December": "December",
-  "setUpVietnam": "Set up Vietnam Liaison Office.",
-  "invitedToParticipate": "Invited to participate in the 16th China Shanghai Financial Expo, accepting media interviews.",
-  "partneredWith": "Partnered with a well-known local licensed dealer in Indonesia – Central Capital Futures Co., Ltd., officially entering the fourth largest market in the world.",
-  "awardedTheMostInvestorTrusted": "Awarded the Most Investor Trusted Precious Metal Dealer of the Year.",
-  "WCGMarketsLtdObtained": "WCG Markets Ltd obtained the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) license with the number 126087 BC 2020.",
-  "establishedMalaysia": "Established Malaysia Liaison Office.",
-  "setUpTaiwan": "Set up Taiwan Liaison Office.",
-  "aLeaderInTheIndustry": "Mr. Wu Guoqiang, a leader in the industry, joined forces and is responsible for the risk control and monitoring department. Mr. Wu has a master's degree in finance and a number of international professional qualifications. He has served as chief trader and head of risk management department of many world-class banks.",
-  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd obtained the FINTRAC MSB license of Canada, the number is M20282836.",
-  "startCharityProjects": "Start charity projects, actively participate in education and medical charity projects, and strive to become a good corporate citizen and give back to the society.",
-  "integrateAndUpdate": "Integrate and update the brand. Adopting new logos and slogans, and also grandly launching a new webpage with multiple languages ​​to facilitate international investors.",
-  "theTradingSystem": "The trading system is upgraded, and more new products are launched, such as US stocks, cryptocurrency, etc., to optimize the investment experience of customers.",
-  "focusingOn": "Focusing on rural quality education, we specially sponsor the Zhixing Education Foundation's 21-22 Zhixing Book Corner Project. It is estimated that there will be at least 6 primary schools and thousands of primary school students can benefit from it.",
-  "WCGIFXEXPO": "WCG & IFX EXPO"
+  "setUpVietnam": "Mendirikan Kantor Penghubung Vietnam.",
+  "invitedToParticipate": "Diundang untuk berpartisipasi dalam China Shanghai Financial Expo ke-16, menerima wawancara media.",
+  "partneredWith": "Bermitra dengan dealer berlisensi lokal ternama di Indonesia – Central Capital Futures Co., Ltd., secara resmi memasuki pasar terbesar keempat di dunia.",
+  "awardedTheMostInvestorTrusted": "Dianugerahi sebagai Dealer Logam Mulia Terpercaya Tahun Ini.",
+  "WCGMarketsLtdObtained": "WCG Markets Ltd memperoleh lisensi Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) dengan nomor 126087 BC 2020.",
+  "establishedMalaysia": "Mendirikan Kantor Penghubung Malaysia.",
+  "setUpTaiwan": "Mendirikan Kantor Penghubung Taiwan.",
+  "aLeaderInTheIndustry": "Tuan Wu Guoqiang, seorang pemimpin dalam industri ini, bergabung dan bertanggung jawab atas departemen pengendalian dan pemantauan risiko. Mr. Wu memiliki gelar master di bidang keuangan dan sejumlah kualifikasi profesional internasional. Dia telah menjabat sebagai kepala pedagang dan kepala departemen manajemen risiko di banyak bank kelas dunia.",
+  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd memperoleh lisensi FINTRAC MSB Kanada, nomornya M20282836.",
+  "startCharityProjects": "Mulai proyek amal, berpartisipasi aktif dalam proyek amal pendidikan dan medis, dan berusaha untuk menjadi warga korporat yang baik dan memberikan kembali kepada masyarakat.",
+  "integrateAndUpdate": "Integrasikan dan perbarui merek. Mengadopsi logo dan slogan baru, dan juga meluncurkan halaman web baru dengan berbagai bahasa untuk memfasilitasi investor internasional.",
+  "theTradingSystem": "Sistem perdagangan ditingkatkan, dan lebih banyak produk baru diluncurkan, seperti saham AS, mata uang kripto, dll., untuk mengoptimalkan pengalaman investasi pelanggan.",
+  "focusingOn": "Berfokus pada pendidikan berkualitas pedesaan, kami secara khusus mensponsori Proyek Pojok Buku Zhixing Education Foundation 21-22. Diperkirakan setidaknya akan ada 6 SD dan ribuan siswa SD bisa merasakan manfaatnya.",
+  "WCGIFXEXPO": "WCG & IFX EXPO",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "Kekuatan WCG Markets ditegaskan kembali bahwa kemampuan manajemen fungsi platform perdagangan elektronik berada di atas tingkat standar, dan telah lulus uji penilaian dan berhasil menyelesaikan proyek yang ditunjuk dan prosedur penilaian. Memperoleh lencana Bersertifikat GTP dari Asosiasi Perdagangan Emas dan Perak.",
+  "WCGMarketsWonTheThirdPlace": "WCG Markets memenangkan tempat ketiga dalam donasi amal tertinggi dari sebuah perusahaan Hong Kong pada tahun 2021. Kehormatan ini merupakan penegasan penuh atas pencapaian kesejahteraan publik yang luar biasa dari WCG Markets.",
+  "BusinessExpansionTechnologyUpgrade": "Ekspansi bisnis, peningkatan teknologi, akuisisi server perdagangan ASA, untuk memberi pelanggan lingkungan perdagangan yang lebih unggul.",
+  "WCGMarketsAcquired": "WCG Markets mengakuisisi dua lembaga keuangan terkenal \"Wealth Gold Group\" dan \"KUJI\", meletakkan dasar yang baik untuk pengembangan di masa depan."
 }
