--- a/src/i18n/locales/cn/contactUs.json
+++ b/src/i18n/locales/cn/contactUs.json
@@ -55,5 +55,9 @@
   "integrateAndUpdate": "整合及更新品牌。采用全新标志和标语，也隆重推出全新网页，具备多国语言，便利国际投资者",
   "theTradingSystem": "交易系统升级，推出更多新产品，如美股等，优化客户的投资体验",
   "focusingOn": "心系乡村素质教育，特赞助知行教育基金会 21-22 年度知行图书角项目，预计最少有6所小学，数以千计的小学生可因此获益",
-  "WCGIFXEXPO": "WCG & IFX EXPO 国际环球金融展览"
+  "WCGIFXEXPO": "WCG & IFX EXPO 国际环球金融展览",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "WCG Markets 实力再被确认电子交易平台功能的管理能力均在标准以上的水准， 并通过考核测试，顺利完成指定项目及考核程式。获金银业贸易场GTP Certified徽章。",
+  "WCGMarketsWonTheThirdPlace": "WCG Markets 获得2021年度香港公司最高慈善捐款第三名的殊荣，这项荣誉，是对WCG Markets 出色的公益成果的充分肯定。",
+  "BusinessExpansionTechnologyUpgrade": "业务再扩张，技术升级，收购ASA交易伺服器，为客户提供更优越的交易环境。",
+  "WCGMarketsAcquired": "WCG Markets 收购两大知名金融机构”盈富Wealth Gold Group”及”酷极KUJI”，为未来发展奠下良好基础。"
 }
