--- a/src/i18n/locales/en/contactUs.json
+++ b/src/i18n/locales/en/contactUs.json
@@ -55,5 +55,9 @@
   "integrateAndUpdate": "Integrate and update the brand. Adopting new logos and slogans, and also grandly launching a new webpage with multiple languages ​​to facilitate international investors.",
   "theTradingSystem": "The trading system is upgraded, and more new products are launched, such as US stocks, etc., to optimize the investment experience of customers.",
   "focusingOn": "Focusing on rural quality education, we specially sponsor the Zhixing Education Foundation's 21-22 Zhixing Book Corner Project. It is estimated that there will be at least 6 primary schools and thousands of primary school students can benefit from it.",
-  "WCGIFXEXPO": "WCG & IFX EXPO"
+  "WCGIFXEXPO": "WCG & IFX EXPO",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "The strength of WCG Markets is reconfirmed that the management capabilities of the electronic trading platform functions are above the standard level, and it has passed the assessment test and successfully completed the designated projects and assessment procedures. Obtained the GTP Certified badge of the Gold and Silver Trade Association.",
+  "WCGMarketsWonTheThirdPlace": "WCG Markets won the third place in the highest charitable donation of a Hong Kong company in 2021. This honor is a full affirmation of WCG Markets' outstanding public welfare achievements.",
+  "BusinessExpansionTechnologyUpgrade": "Business expansion, technology upgrade, acquisition of ASA trading server, to provide customers with a more superior trading environment.",
+  "WCGMarketsAcquired": "WCG Markets acquired two well-known financial institutions \"Wealth Gold Group\" and \"KUJI\", laying a good foundation for future development."
 }
