--- a/src/i18n/locales/ms/contactUs.json
+++ b/src/i18n/locales/ms/contactUs.json
@@ -42,18 +42,22 @@
   "October": "October",
   "November": "November",
   "December": "December",
-  "setUpVietnam": "Set up Vietnam Liaison Office.",
-  "invitedToParticipate": "Invited to participate in the 16th China Shanghai Financial Expo, accepting media interviews.",
-  "partneredWith": "Partnered with a well-known local licensed dealer in Indonesia – Central Capital Futures Co., Ltd., officially entering the fourth largest market in the world.",
-  "awardedTheMostInvestorTrusted": "Awarded the Most Investor Trusted Precious Metal Dealer of the Year.",
-  "WCGMarketsLtdObtained": "WCG Markets Ltd obtained the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) license with the number 126087 BC 2020.",
-  "establishedMalaysia": "Established Malaysia Liaison Office.",
-  "setUpTaiwan": "Set up Taiwan Liaison Office.",
-  "aLeaderInTheIndustry": "Mr. Wu Guoqiang, a leader in the industry, joined forces and is responsible for the risk control and monitoring department. Mr. Wu has a master's degree in finance and a number of international professional qualifications. He has served as chief trader and head of risk management department of many world-class banks.",
-  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd obtained the FINTRAC MSB license of Canada, the number is M20282836.",
-  "startCharityProjects": "Start charity projects, actively participate in education and medical charity projects, and strive to become a good corporate citizen and give back to the society.",
-  "integrateAndUpdate": "Integrate and update the brand. Adopting new logos and slogans, and also grandly launching a new webpage with multiple languages ​​to facilitate international investors.",
-  "theTradingSystem": "The trading system is upgraded, and more new products are launched, such as US stocks, cryptocurrency, etc., to optimize the investment experience of customers.",
-  "focusingOn": "Focusing on rural quality education, we specially sponsor the Zhixing Education Foundation's 21-22 Zhixing Book Corner Project. It is estimated that there will be at least 6 primary schools and thousands of primary school students can benefit from it.",
-  "WCGIFXEXPO": "WCG & IFX EXPO"
+  "setUpVietnam": "Sediakan Pejabat Perhubungan Vietnam.",
+  "invitedToParticipate": "Dijemput untuk mengambil bahagian dalam Ekspo Kewangan China Shanghai ke-16, menerima wawancara media.",
+  "partneredWith": "Bekerjasama dengan peniaga berlesen tempatan yang terkenal di Indonesia – Central Capital Futures Co., Ltd., secara rasmi memasuki pasaran keempat terbesar di dunia.",
+  "awardedTheMostInvestorTrusted": "Dianugerahkan Peniaga Logam Berharga Paling Dipercayai Pelabur Tahun Ini.",
+  "WCGMarketsLtdObtained": "WCG Markets Ltd memperoleh lesen Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) dengan nombor 126087 BC 2020.",
+  "establishedMalaysia": "Menubuhkan Pejabat Perhubungan Malaysia.",
+  "setUpTaiwan": "Sediakan Pejabat Perhubungan Taiwan.",
+  "aLeaderInTheIndustry": "Encik Wu Guoqiang, seorang pemimpin dalam industri, bergabung tenaga dan bertanggungjawab ke atas jabatan kawalan dan pemantauan risiko. Encik Wu mempunyai ijazah sarjana dalam kewangan dan beberapa kelayakan profesional antarabangsa. Beliau telah berkhidmat sebagai ketua peniaga dan ketua jabatan pengurusan risiko banyak bank bertaraf dunia.",
+  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd memperoleh lesen FINTRAC MSB Kanada, nombornya ialah M20282836.",
+  "startCharityProjects": "Mulakan projek amal, mengambil bahagian secara aktif dalam projek amal pendidikan dan perubatan, dan berusaha untuk menjadi warga korporat yang baik dan memberi kembali kepada masyarakat.",
+  "integrateAndUpdate": "Sepadukan dan kemas kini jenama. Mengguna pakai logo dan slogan baharu, dan juga melancarkan halaman web baharu dengan berbilang bahasa untuk memudahkan pelabur antarabangsa.",
+  "theTradingSystem": "Sistem perdagangan dinaik taraf, dan lebih banyak produk baharu dilancarkan, seperti saham AS, mata wang kripto, dll., untuk mengoptimumkan pengalaman pelaburan pelanggan.",
+  "focusingOn": "Dengan memberi tumpuan kepada pendidikan berkualiti luar bandar, kami menaja khas Projek Sudut Buku Zhixing 21-22 Yayasan Pendidikan Zhixing. Dianggarkan terdapat sekurang-kurangnya 6 sekolah rendah dan beribu-ribu pelajar sekolah rendah boleh mendapat manfaat daripadanya.",
+  "WCGIFXEXPO": "WCG & IFX EXPO",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "Kekuatan WCG Markets disahkan semula bahawa keupayaan pengurusan fungsi platform dagangan elektronik berada di atas tahap standard, dan ia telah lulus ujian penilaian dan berjaya menyelesaikan projek dan prosedur penilaian yang ditetapkan. Mendapat lencana Diperakui GTP bagi Persatuan Perdagangan Emas dan Perak.",
+  "WCGMarketsWonTheThirdPlace": "WCG Markets memenangi tempat ketiga dalam sumbangan amal tertinggi sebuah syarikat Hong Kong pada tahun 2021. Penghormatan ini adalah pengesahan penuh pencapaian kebajikan awam WCG Markets yang cemerlang.",
+  "BusinessExpansionTechnologyUpgrade": "Pengembangan perniagaan, peningkatan teknologi, pemerolehan pelayan dagangan ASA, untuk menyediakan pelanggan dengan persekitaran dagangan yang lebih unggul.",
+  "WCGMarketsAcquired": "WCG Markets memperoleh dua institusi kewangan terkenal \"Wealth Gold Group\" dan \"KUJI\", meletakkan asas yang baik untuk pembangunan masa depan."
 }
