refactor(i18n): update Thai wording

--- a/src/i18n/locales/th/header.json
+++ b/src/i18n/locales/th/header.json
@@ -1,5 +1,5 @@
 {
-  "home": "บ้าน",
+  "home": "หน้าหลัก",
   "about": "เกี่ยวกับ WCG",
   "companyNews": "ข่าวบริษัท",
   "corporateResponsibility": "ความรับผิดชอบขององค์กร",
