--- a/src/i18n/locales/th/platform.json
+++ b/src/i18n/locales/th/platform.json
@@ -6,7 +6,7 @@
   "MT4Provides31Chart": "MT4 มีเครื่องมือวิเคราะห์แผนภูมิ 31 รายการและตัวบ่งชี้การซื้อขายที่แตกต่างกัน 30 รายการ คุณสามารถตั้งค่าตัวบ่งชี้และหมวดหมู่แผนภูมิแต่ละรายการ กำหนดพารามิเตอร์และวิธีการแสดงผลที่เหมาะกับคุณ เพื่อให้คุณได้รับประสบการณ์การซื้อขายที่น่าพอใจ",
   "diversifiedInvestmentTransactions": "ธุรกรรมการลงทุนที่หลากหลาย",
   "theBestWayToManageRisk": "วิธีจัดการความเสี่ยงที่ดีที่สุดคือการกระจายการลงทุน ในแพลตฟอร์มการซื้อขาย MT4 ของ WCG คุณสามารถเลือกจากชุดผลิตภัณฑ์การซื้อขายและตลาดเพื่อสร้างความแข็งแกร่งและกระจายการลงทุนของคุณ",
-  "intuitiveAndEasyToUse": "ใช้งานง่ายและใช้งานง่าย",
+  "intuitiveAndEasyToUse": "ใช้งานง่ายและสะดวก",
   "completeAndComprehensiveReports": "รายงานที่สมบูรณ์และครอบคลุม เช่น หมายเลขการติดตาม ราคาเปิด ปริมาณธุรกรรม สถานะบัญชีของคำสั่งซื้อทั้งหมด และข้อมูลที่ครอบคลุมเกี่ยวกับตำแหน่ง สามารถแสดงได้ในหน้าต่างเทอร์มินัล คุณสามารถดูข้อมูลตลาดตามเวลาจริงได้ทุกที่ทุกเวลาเพื่อช่วยคุณในการตัดสินใจซื้อขายอย่างมีเหตุผล รองรับการซื้อขายอัจฉริยะ (EA) และระบบทดสอบกลยุทธ์ย้อนหลังมากขึ้น เพื่อมอบความยืดหยุ่นในการซื้อขาย การกำกับดูแลและการควบคุมในระดับสูง",
   "automaticAdaptabilityAndScalability": "การปรับตัวอัตโนมัติและความสามารถในการปรับขนาด",
   "throughTheFurtherDevelopment": "ด้วยการพัฒนาเพิ่มเติมของโปรแกรม API ทำให้ WCG MT4 สามารถผสานรวมกับอุปกรณ์การซื้อขายที่คุณมีอยู่ได้อย่างสมบูรณ์แบบ ไม่ว่าคุณจะอยู่ที่มุมใดของโลก คุณก็สามารถเข้าถึงแพลตฟอร์มการซื้อขายของคุณเพื่อปรับแต่งตัวบ่งชี้ของคุณ ดำเนินคำสั่ง และดำเนินการธุรกรรมได้เสมอ ตั้งราคาจำกัด คำสั่งหยุดการขาดทุน และติดตามแนวโน้มตลาดเพื่อให้แน่ใจว่าคุณจะไม่พลาดโอกาสในการซื้อขายและข้อมูลการตลาดที่สำคัญแม้ในขณะที่คุณอยู่กลางแจ้ง",
