--- a/src/i18n/locales/th/whiteLabelCooperation.json
+++ b/src/i18n/locales/th/whiteLabelCooperation.json
@@ -1,5 +1,5 @@
 {
-  "whiteLabel": "ความร่วมมือป้ายขาว",
+  "whiteLabel": "ความร่วมมือไวท์เลเบล",
   "wCGsWhite": "โครงการความร่วมมือไวท์เลเบลของ WCG ช่วยให้คุณสร้างแบรนด์ส่วนตัว (หรือบริษัท) ในอุตสาหกรรมการแลกเปลี่ยนเงินตราต่างประเทศ นี่คือโซลูชันที่ช่วยให้คุณสามารถใช้ข้อมูลประจำตัวและเว็บไซต์ของคุณเพื่อดำเนินธุรกิจนายหน้าซื้อขายหลักทรัพย์ เราสามารถจัดหาผลิตภัณฑ์คุณภาพสูง แพลตฟอร์มการซื้อขายที่ทำงานได้อย่างสมบูรณ์ เทคโนโลยีที่ทันสมัย ​​และเงื่อนไขการแข่งขันเพื่อตอบสนองทุกความต้องการของลูกค้าของคุณ",
   "applyFor": "ขอความร่วมมือ",
   "wCGWhite": "กลยุทธ์ฉลากขาวของ WCG",
