--- a/src/i18n/locales/th/home.json
+++ b/src/i18n/locales/th/home.json
@@ -13,9 +13,9 @@
   "invest": "ลงทุน ",
   "inNewChannels": "ในช่องทางใหม่ๆ สร้างรายได้ใน WCG",
   "professionalEquals": "มืออาชีพ 100% เท่ากับความมั่นใจ 100%",
-  "mobileTradingSystem": "ระบบซื้อขายมือถือ",
+  "mobileTradingSystem": "ระบบซื้อขายผ่านมือถือ",
   "WCGMobileTradingSystem": "ระบบการซื้อขายบนมือถือของ WCG เป็นวิธีการที่ง่ายและสะดวกเพื่อให้ลูกค้าสามารถซื้อขายได้ในขณะเดินทางและตอบสนองต่อข่าวสารและข้อมูลของตลาดทันที ซึ่งจะเป็นการเพิ่มโอกาสในการซื้อขายให้สูงสุด",
-  "brandReputation": "ชื่อเสียงของแบรนด์และความสัมพันธ์แบบ win-win",
+  "brandReputation": "ชื่อเสียงของแบรนด์และความสัมพันธ์แบบเติบโต",
   "WCGValuesTheCustomersTradingExperience": "WCG ให้ความสำคัญกับประสบการณ์การค้าของลูกค้าและเชื่อมั่นว่าการพัฒนาแบรนด์ในอนาคตขึ้นอยู่กับการเติบโตร่วมกันของพันธมิตร",
   "preciousMetalsContract": "สัญญาโลหะมีค่า",
   "timesLeverage": "เลเวอเรจ 100-200 เท่า ต้นทุนต่ำและผลตอบแทนสูง การซื้อขายทั่วโลกตลอด 24 ชั่วโมง สามารถทำกำไรได้ทั้งการซื้อและการขาย",
