refactor(many): remove mt related content

--- a/src/i18n/locales/cn/platform.json
+++ b/src/i18n/locales/cn/platform.json
@@ -75,7 +75,7 @@
   "establishMultipleTrading": "为各种政策建立多个交易子群组",
   "accordingToAccountLevel": "根据账户水准，提供部分平仓功能",
   "customersCanStart": "客户的交易量达到0.01手就可以开始分配",
-  "compatibleWithAll": "相容所有MT4订单类型：止损、限价、跟踪止损、全部平仓等",
+  "compatibleWithAll": "相容所有订单类型：止损、限价、跟踪止损、全部平仓等",
   "thereIsNoLimit": "下单不限制客户帐号数量",
   "yourPartnerToTheRoadOfSuccess": "您的成功伙伴",
   "toProvideYouWithFlexibleAndCompetitiveRates": "为您提供有弹性又有竞争力的费率，设定快速以及高水准的持续支援，MAM系统也提供所有您需要的资料清单，包括未结束交易、馀额、盈亏、客户联络资料等。",
