--- a/src/i18n/locales/en/platform.json
+++ b/src/i18n/locales/en/platform.json
@@ -74,8 +74,8 @@
   "compatibleWithEA": "Compatible with EA (Expert Advisor) and automatic trading strategies",
   "establishMultipleTrading": "Establish multiple trading subgroups for various policies",
   "accordingToAccountLevel": "According to account level, provide partial closing function",
-  "customersCanStart": "Customers can start to allocate compatible all MT4 order types when the trading volume reaches 0.01 lot",
-  "compatibleWithAll": "Compatible with all MT4 orders, for instance, stop loss, limit price, etc.",
+  "customersCanStart": "Customers can start to allocate compatible all order types when the trading volume reaches 0.01 lot",
+  "compatibleWithAll": "Compatible with all orders, for instance, stop loss, limit price, etc.",
   "thereIsNoLimit": "There is no limit of account amount when placing order.",
   "yourPartnerToTheRoadOfSuccess": "Your partner to the road of success",
   "toProvideYouWithFlexibleAndCompetitiveRates": "To provide you with flexible and competitive rates, fast setting and high-level continuous support, the MAM system also provides a list of all the information you need including outstanding trades, balances, profit and loss, customer contact information, etc.",
