--- a/src/i18n/locales/id/platform.json
+++ b/src/i18n/locales/id/platform.json
@@ -74,8 +74,8 @@
   "compatibleWithEA": "Kompatibel dengan EA (Expert Advisor) dan strategi perdagangan otomatis",
   "establishMultipleTrading": "Buat beberapa subkelompok perdagangan untuk berbagai kebijakan",
   "accordingToAccountLevel": "Menurut level akun, berikan fungsi penutupan sebagian",
-  "customersCanStart": "Pelanggan dapat mulai mengalokasikan semua jenis pesanan MT4 yang kompatibel ketika volume perdagangan mencapai 0.01 lot",
-  "compatibleWithAll": "Kompatibel dengan semua pesanan MT4, misalnya, stop loss, harga batas, dll.",
+  "customersCanStart": "Pelanggan dapat mulai mengalokasikan semua jenis pesanan yang kompatibel ketika volume perdagangan mencapai 0.01 lot",
+  "compatibleWithAll": "Kompatibel dengan semua pesanan, misalnya, stop loss, harga batas, dll.",
   "thereIsNoLimit": "Tidak ada batasan jumlah akun saat melakukan pemesanan.",
   "yourPartnerToTheRoadOfSuccess": "Mitra Anda menuju jalan kesuksesan",
   "toProvideYouWithFlexibleAndCompetitiveRates": "Untuk memberi Anda harga yang fleksibel dan bersaing, pengaturan cepat, dan dukungan berkelanjutan tingkat tinggi, sistem MAM juga menyediakan daftar semua informasi yang Anda butuhkan termasuk perdagangan yang beredar, saldo, untung dan rugi, informasi kontak pelanggan, dll.",
