--- a/src/i18n/locales/ms/platform.json
+++ b/src/i18n/locales/ms/platform.json
@@ -74,8 +74,8 @@
   "compatibleWithEA": "Sesuai dengan EA (Expert Advisor) dan strategi perdagangan automatik",
   "establishMultipleTrading": "Menetapkan beberapa subkumpulan perdagangan untuk pelbagai dasar",
   "accordingToAccountLevel": "Mengikut tahap akaun, sediakan fungsi penutupan separa",
-  "customersCanStart": "Pelanggan boleh mula memperuntukkan semua jenis pesanan MT4 yang serasi apabila jumlah dagangan mencapai 0.01 lot",
-  "compatibleWithAll": "Sesuai dengan semua pesanan MT4, misalnya, stop loss, had harga, dll.",
+  "customersCanStart": "Pelanggan boleh mula memperuntukkan semua jenis pesanan yang serasi apabila jumlah dagangan mencapai 0.01 lot",
+  "compatibleWithAll": "Sesuai dengan semua pesanan, misalnya, stop loss, had harga, dll.",
   "thereIsNoLimit": "Tidak ada had jumlah akaun semasa membuat pesanan.",
   "yourPartnerToTheRoadOfSuccess": "Rakan kongsi anda ke jalan kejayaan",
   "toProvideYouWithFlexibleAndCompetitiveRates": "Untuk memberi anda kadar fleksibel dan kompetitif, pengaturan cepat dan sokongan berterusan tahap tinggi, sistem MAM juga menyediakan senarai semua maklumat yang anda perlukan termasuk perdagangan, baki, untung dan rugi, maklumat hubungan pelanggan, dll.",
