--- a/src/i18n/locales/th/platform.json
+++ b/src/i18n/locales/th/platform.json
@@ -74,8 +74,8 @@
   "compatibleWithEA": "เข้ากันได้กับ EA (Expert Advisor) และกลยุทธ์การซื้อขายอัตโนมัติ",
   "establishMultipleTrading": "สร้างกลุ่มย่อยการซื้อขายหลายกลุ่มสำหรับนโยบายต่างๆ",
   "accordingToAccountLevel": "ตามระดับบัญชี จัดเตรียมฟังก์ชันการปิดบางส่วน",
-  "customersCanStart": "ลูกค้าสามารถเริ่มจัดสรรประเภทคำสั่ง MT4 ทั้งหมดที่เข้ากันได้เมื่อปริมาณการซื้อขายถึง 0.01 ล็อต",
-  "compatibleWithAll": "เข้ากันได้กับคำสั่ง MT4 ทั้งหมด เช่น หยุดการขาดทุน ราคาจำกัด เป็นต้น",
+  "customersCanStart": "ลูกค้าสามารถเริ่มจัดสรรประเภทคำสั่ง ทั้งหมดที่เข้ากันได้เมื่อปริมาณการซื้อขายถึง 0.01 ล็อต",
+  "compatibleWithAll": "เข้ากันได้กับคำสั่ง ทั้งหมด เช่น หยุดการขาดทุน ราคาจำกัด เป็นต้น",
   "thereIsNoLimit": "ไม่มีการจำกัดจำนวนเงินในบัญชีเมื่อทำการสั่งซื้อ",
   "yourPartnerToTheRoadOfSuccess": "คู่ของคุณสู่เส้นทางแห่งความสำเร็จ",
   "toProvideYouWithFlexibleAndCompetitiveRates": "เพื่อให้คุณมีอัตราที่ยืดหยุ่นและแข่งขันได้ การตั้งค่าที่รวดเร็วและการสนับสนุนอย่างต่อเนื่องในระดับสูง ระบบ MAM ยังให้รายการข้อมูลทั้งหมดที่คุณต้องการ รวมทั้งการซื้อขายคงค้าง ยอดคงเหลือ กำไรและขาดทุน ข้อมูลติดต่อลูกค้า ฯลฯ",
