--- a/src/i18n/locales/vi/platform.json
+++ b/src/i18n/locales/vi/platform.json
@@ -74,8 +74,8 @@
   "compatibleWithEA": "Tương thích với EA (Chuyên gia cố vấn) và các chiến lược giao dịch tự động",
   "establishMultipleTrading": "Thiết lập nhiều phân nhóm giao dịch cho các chính sách khác nhau",
   "accordingToAccountLevel": "Theo cấp tài khoản, cung cấp chức năng đóng một phần",
-  "customersCanStart": "Khách hàng có thể bắt đầu phân bổ tất cả các loại lệnh MT4 tương thích khi khối lượng giao dịch đạt 0,01 lot",
-  "compatibleWithAll": "Tương thích với tất cả các lệnh MT4, ví dụ: cắt lỗ, giới hạn giá, v.v.",
+  "customersCanStart": "Khách hàng có thể bắt đầu phân bổ tất cả các loại lệnh tương thích khi khối lượng giao dịch đạt 0,01 lot",
+  "compatibleWithAll": "Tương thích với tất cả các lệnh, ví dụ: cắt lỗ, giới hạn giá, v.v.",
   "thereIsNoLimit": "Không giới hạn số tiền tài khoản khi đặt hàng.",
   "yourPartnerToTheRoadOfSuccess": "Đối tác của bạn trên con đường thành công",
   "toProvideYouWithFlexibleAndCompetitiveRates": "Để cung cấp cho bạn mức giá linh hoạt và cạnh tranh, cài đặt nhanh và hỗ trợ liên tục ở mức cao, hệ thống MAM cũng cung cấp danh sách tất cả thông tin bạn cần bao gồm các giao dịch chưa thanh toán, số dư, lãi và lỗ, thông tin liên hệ của khách hàng, v.v.",
