--- a/src/i18n/locales/zh/platform.json
+++ b/src/i18n/locales/zh/platform.json
@@ -75,7 +75,7 @@
   "establishMultipleTrading": "為各種政策建立多個交易子群組",
   "accordingToAccountLevel": "根據帳戶水準，提供部分平倉功能",
   "customersCanStart": "客戶的交易量達到0.01手就可以開始分配",
-  "compatibleWithAll": "相容所有MT4訂單類型：止損、限價、跟蹤止損、全部平倉等",
+  "compatibleWithAll": "相容所有訂單類型：止損、限價、跟蹤止損、全部平倉等",
   "thereIsNoLimit": "下單不限制客戶帳號數量",
   "yourPartnerToTheRoadOfSuccess": "您的成功夥伴",
   "toProvideYouWithFlexibleAndCompetitiveRates": "為您提供有彈性又有競爭力的費率，設定快速以及高水準的持續支援，MAM系統也提供所有您需要的資料清單，包括未結束交易、餘額、盈虧、客戶聯絡資料等。",
