refactor(many): update content for mq kyc

--- a/src/i18n/locales/ar/footer.json
+++ b/src/i18n/locales/ar/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "© WCG جميع الحقوق محفوظة ، لا إعادة طبع",
+  "copyright": "© WCG Group Limited جميع الحقوق محفوظة ، لا إعادة طبع",
   "privacyPolicy": "سياسة الخصوصية",
   "termsAndConditions": "الأحكام والشروط",
   "disputeSettlement": "تسوية المنازعات",
