--- a/src/i18n/locales/id/footer.json
+++ b/src/i18n/locales/id/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "© WCG Hak cipta dilindungi undang-undang tidak ada cetak ulang",
+  "copyright": "© WCG Group Limited Hak cipta dilindungi undang-undang tidak ada cetak ulang",
   "privacyPolicy": "Kebijakan Privasi",
   "termsAndConditions": "Syarat dan Ketentuan",
   "disputeSettlement": "Penyelesaian Sengketa",
