--- a/src/i18n/locales/ms/footer.json
+++ b/src/i18n/locales/ms/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "© WCG All rights reserved, no reprint",
+  "copyright": "© WCG Group Limited All rights reserved, no reprint",
   "privacyPolicy": "Polisi Peribadi",
   "termsAndConditions": "Terma dan Syarat",
   "disputeSettlement": "Penyelesaian Pertikaian",
