--- a/src/i18n/locales/th/footer.json
+++ b/src/i18n/locales/th/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "© WCG สงวนลิขสิทธิ์ ห้ามพิมพ์ซ้ำ",
+  "copyright": "© WCG Group Limited สงวนลิขสิทธิ์ ห้ามพิมพ์ซ้ำ",
   "privacyPolicy": "นโยบายความเป็นส่วนตัว",
   "termsAndConditions": "ข้อกำหนดและเงื่อนไข",
   "disputeSettlement": "การระงับข้อพิพาท",
