--- a/src/i18n/locales/vi/footer.json
+++ b/src/i18n/locales/vi/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "© WCG Bảo lưu mọi quyền, không tái bản",
+  "copyright": "© WCG Group Limited Bảo lưu mọi quyền, không tái bản",
   "privacyPolicy": "Chính sách bảo mật",
   "termsAndConditions": "Các điều khoản và điều kiện",
   "disputeSettlement": "Giải quyết tranh chấp",
