--- a/src/i18n/locales/cn/footer.json
+++ b/src/i18n/locales/cn/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "© WCG Markets Ltd 版权所有，不得转载",
+  "copyright": "© WCG Group Limited 版权所有，不得转载",
   "privacyPolicy": "隐私条款",
   "termsAndConditions": "条款细则",
   "disputeSettlement": "争端处理",
