feat(popup/button): add popup TransferNotificationOfPayment, add new usercenter and ib

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -2,7 +2,9 @@
   "openRealAccount": "افتح حساب حقيقي",
   "openDemoAccount": "افتح حساب تجريبي",
   "usersCenter": "مركز المستخدم",
+  "usersCenter20": "2.0 مركز المستخدم",
   "iBCenter": "مركز الوسطاء المُعرّفين",
+  "iBCenter20": "2.0 مركز الوسطاء المُعرّفين",
   "contactUs": "اتصل بنا",
   "telegram": "Telegram",
   "Miduoke": "خدمة العملاء 1",
