--- a/src/i18n/locales/cn/common.json
+++ b/src/i18n/locales/cn/common.json
@@ -2,7 +2,9 @@
   "openRealAccount": "开立真实账户",
   "openDemoAccount": "开立模拟账户",
   "usersCenter": "客户中心",
+  "usersCenter20": "新客户中心",
   "iBCenter": "代理中心",
+  "iBCenter20": "新代理中心",
   "contactUs": "联系我们",
   "telegram": "Telegram",
   "Miduoke": "在线客服1",
