--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -2,7 +2,9 @@
   "openRealAccount": "Open Real Account",
   "openDemoAccount": "Open Demo Account",
   "usersCenter": "Users' Center",
+  "usersCenter20": "Users' Center 2.0",
   "iBCenter": "IB Center",
+  "iBCenter20": "IB Center 2.0",
   "contactUs": "Contact us",
   "telegram": "Telegram",
   "Miduoke": "Customer service 1",
