--- a/src/i18n/locales/ms/common.json
+++ b/src/i18n/locales/ms/common.json
@@ -2,7 +2,9 @@
   "openRealAccount": "Buka akaun sebenar",
   "openDemoAccount": "Pusat Pengguna",
   "usersCenter": "Pusat pelanggan",
+  "usersCenter20": "Pusat pelanggan 2.0",
   "iBCenter": "Pusat Agen",
+  "iBCenter20": "Pusat Agen 2.0",
   "contactUs": "Hubungi Kami",
   "telegram": "Telegram",
   "Miduoke": "Khidmat Pelanggan 1",
