--- a/src/i18n/locales/th/common.json
+++ b/src/i18n/locales/th/common.json
@@ -2,7 +2,9 @@
   "openRealAccount": "เปิดบัญชีจริง",
   "openDemoAccount": "เปิดบัญชีทดลอง",
   "usersCenter": "ศูนย์ผู้ใช้",
+  "usersCenter20": "ศูนย์ผู้ใช้ 2.0",
   "iBCenter": "ไอบี เซ็นเตอร์",
+  "iBCenter20": "ไอบี เซ็นเตอร์ 2.0",
   "contactUs": "ติดต่อเรา",
   "telegram": "Telegram",
   "Miduoke": "ฝ่ายบริการลูกค้า1",
