--- a/src/i18n/locales/vi/common.json
+++ b/src/i18n/locales/vi/common.json
@@ -2,7 +2,9 @@
   "openRealAccount": "Mở tài khoản thực",
   "openDemoAccount": "Mở tài khoản demo",
   "usersCenter": "Trung tâm khách hàng",
+  "usersCenter20": "Trung tâm khách hàng 2.0",
   "iBCenter": "Trung tâm đại lý",
+  "iBCenter20": "Trung tâm đại lý 2.0",
   "contactUs": "Liên hệ chúng tôi",
   "telegram": "Telegram",
   "Miduoke": "Dịch vụ khách hàng 1",
