feat(companynews): add companyNews content

--- a/src/i18n/locales/ar/contactUs.json
+++ b/src/i18n/locales/ar/contactUs.json
@@ -56,5 +56,8 @@
   "TheStrengthOfWCGMarketsIsReconfirmed": "تم التأكيد مجددًا على قوة WCG Markets على أن القدرات الإدارية لوظائف منصة التداول الإلكترونية أعلى من المستوى القياسي ، وقد اجتازت اختبار التقييم وأكملت بنجاح المشاريع المحددة وإجراءات التقييم. الحصول على شارة GTP المعتمدة لجمعية تجارة الذهب والفضة.",
   "WCGMarketsWonTheThirdPlace": "فازت WCG Markets بالمركز الثالث في أعلى تبرع خيري من شركة هونغ كونغ في عام 2021. هذا الشرف هو تأكيد كامل لإنجازات WCG Markets المتميزة في مجال الرعاية العامة.",
   "BusinessExpansionTechnologyUpgrade": "توسيع الأعمال ، ترقية التكنولوجيا ، الاستحواذ على خادم تداول ASA ، لتزويد العملاء ببيئة تداول أكثر تفوقًا.",
-  "WCGMarketsAcquired": "استحوذت WCG Markets على مؤسستين ماليتين مشهورتين \"Wealth Gold Group\" و \"KUJI\" ، مما وضع أساسًا جيدًا للتنمية المستقبلية."
+  "WCGMarketsAcquired": "استحوذت WCG Markets على مؤسستين ماليتين مشهورتين \"Wealth Gold Group\" و \"KUJI\" ، مما وضع أساسًا جيدًا للتنمية المستقبلية.",
+  "AMoreHumanizedUserCenter": "يوفر مركز مستخدم أكثر إنسانية تم إنشاؤه باستخدام تقنية ذكاء اصطناعي جديدة التجربة النهائية للعملاء.",
+  "AwardedAsThe": "مُنحت على أنها شركة [أفضل تقنية وحلول مالية] من قبل وكالة التصنيف التنظيمي للتاجر المعروفة [Forex Forex WikiFX].",
+  "ObtainedThePreciousMetals": "الحصول على ترخيص [تسجيل تاجر المعادن الثمينة والأحجار الكريمة] من إدارة الجمارك في منطقة هونغ كونغ الإدارية الخاصة بجمهورية الصين الشعبية."
 }
