--- a/src/i18n/locales/en/contactUs.json
+++ b/src/i18n/locales/en/contactUs.json
@@ -56,5 +56,8 @@
   "TheStrengthOfWCGMarketsIsReconfirmed": "The strength of WCG Markets is reconfirmed that the management capabilities of the electronic trading platform functions are above the standard level, and it has passed the assessment test and successfully completed the designated projects and assessment procedures. Obtained the GTP Certified badge of the Gold and Silver Trade Association.",
   "WCGMarketsWonTheThirdPlace": "WCG Markets won the third place in the highest charitable donation of a Hong Kong company in 2021. This honor is a full affirmation of WCG Markets' outstanding public welfare achievements.",
   "BusinessExpansionTechnologyUpgrade": "Business expansion, technology upgrade, acquisition of ASA trading server, to provide customers with a more superior trading environment.",
-  "WCGMarketsAcquired": "WCG Markets acquired two well-known financial institutions \"Wealth Gold Group\" and \"KUJI\", laying a good foundation for future development."
+  "WCGMarketsAcquired": "WCG Markets acquired two well-known financial institutions \"Wealth Gold Group\" and \"KUJI\", laying a good foundation for future development.",
+  "AMoreHumanizedUserCenter": "A more humanized user center built with new artificial intelligence technology brings the ultimate experience to customers.",
+  "AwardedAsThe": "Awarded as the \"Best Financial Technology and Solution\" company by the well-known dealer regulatory rating agency \"Foreign Exchange WikiFX\".",
+  "ObtainedThePreciousMetals": "Obtained the \"Precious Metals and Gemstone Dealer Registration\" license from the Customs Department of the Hong Kong Special Administrative Region of the People's Republic of China."
 }
