--- a/src/i18n/locales/ms/contactUs.json
+++ b/src/i18n/locales/ms/contactUs.json
@@ -56,5 +56,8 @@
   "TheStrengthOfWCGMarketsIsReconfirmed": "Kekuatan WCG Markets disahkan semula bahawa keupayaan pengurusan fungsi platform dagangan elektronik berada di atas tahap standard, dan ia telah lulus ujian penilaian dan berjaya menyelesaikan projek dan prosedur penilaian yang ditetapkan. Mendapat lencana Diperakui GTP bagi Persatuan Perdagangan Emas dan Perak.",
   "WCGMarketsWonTheThirdPlace": "WCG Markets memenangi tempat ketiga dalam sumbangan amal tertinggi sebuah syarikat Hong Kong pada tahun 2021. Penghormatan ini adalah pengesahan penuh pencapaian kebajikan awam WCG Markets yang cemerlang.",
   "BusinessExpansionTechnologyUpgrade": "Pengembangan perniagaan, peningkatan teknologi, pemerolehan pelayan dagangan ASA, untuk menyediakan pelanggan dengan persekitaran dagangan yang lebih unggul.",
-  "WCGMarketsAcquired": "WCG Markets memperoleh dua institusi kewangan terkenal \"Wealth Gold Group\" dan \"KUJI\", meletakkan asas yang baik untuk pembangunan masa depan."
+  "WCGMarketsAcquired": "WCG Markets memperoleh dua institusi kewangan terkenal \"Wealth Gold Group\" dan \"KUJI\", meletakkan asas yang baik untuk pembangunan masa depan.",
+  "AMoreHumanizedUserCenter": "Pusat pengguna yang lebih berperikemanusiaan yang dibina dengan teknologi kecerdasan buatan baharu membawa pengalaman terbaik kepada pelanggan.",
+  "AwardedAsThe": "Dianugerahkan sebagai syarikat [Teknologi Kewangan dan Penyelesaian Terbaik] oleh agensi penarafan kawal selia peniaga terkenal [Foreign Exchange WikiFX].",
+  "ObtainedThePreciousMetals": "Mendapat lesen [Pendaftaran Peniaga Logam Berharga dan Batu Permata] daripada Jabatan Kastam Wilayah Pentadbiran Khas Hong Kong Republik Rakyat China."
 }
