--- a/src/i18n/locales/id/contactUs.json
+++ b/src/i18n/locales/id/contactUs.json
@@ -56,5 +56,8 @@
   "TheStrengthOfWCGMarketsIsReconfirmed": "Kekuatan WCG Markets ditegaskan kembali bahwa kemampuan manajemen fungsi platform perdagangan elektronik berada di atas tingkat standar, dan telah lulus uji penilaian dan berhasil menyelesaikan proyek yang ditunjuk dan prosedur penilaian. Memperoleh lencana Bersertifikat GTP dari Asosiasi Perdagangan Emas dan Perak.",
   "WCGMarketsWonTheThirdPlace": "WCG Markets memenangkan tempat ketiga dalam donasi amal tertinggi dari sebuah perusahaan Hong Kong pada tahun 2021. Kehormatan ini merupakan penegasan penuh atas pencapaian kesejahteraan publik yang luar biasa dari WCG Markets.",
   "BusinessExpansionTechnologyUpgrade": "Ekspansi bisnis, peningkatan teknologi, akuisisi server perdagangan ASA, untuk memberi pelanggan lingkungan perdagangan yang lebih unggul.",
-  "WCGMarketsAcquired": "WCG Markets mengakuisisi dua lembaga keuangan terkenal \"Wealth Gold Group\" dan \"KUJI\", meletakkan dasar yang baik untuk pengembangan di masa depan."
+  "WCGMarketsAcquired": "WCG Markets mengakuisisi dua lembaga keuangan terkenal \"Wealth Gold Group\" dan \"KUJI\", meletakkan dasar yang baik untuk pengembangan di masa depan.",
+  "AMoreHumanizedUserCenter": "Pusat pengguna yang lebih manusiawi yang dibangun dengan teknologi kecerdasan buatan baru menghadirkan pengalaman terbaik bagi pelanggan.",
+  "AwardedAsThe": "Dianugerahi sebagai perusahaan [Teknologi dan Solusi Finansial Terbaik] oleh agen pemeringkat regulator terkenal [Foreign Exchange WikiFX].",
+  "ObtainedThePreciousMetals": "Memperoleh lisensi [Pendaftaran Dealer Logam Mulia dan Batu Permata] dari Departemen Pabean Wilayah Administratif Khusus Hong Kong, Republik Rakyat Tiongkok."
 }
