--- a/src/i18n/locales/zh/contactUs.json
+++ b/src/i18n/locales/zh/contactUs.json
@@ -56,5 +56,8 @@
   "TheStrengthOfWCGMarketsIsReconfirmed": "WCG Markets 實力再被確認電子交易平台功能的管理能力均在標準以上的水準， 並通過考核測試，順利完成指定項目及考核程式。獲金銀業貿易場GTP Certified徽章。",
   "WCGMarketsWonTheThirdPlace": "WCG Markets 獲得2021年度香港公司最高慈善捐款第三名的殊榮，這項榮譽，是對WCG Markets 出色的公益成果的充分肯定。",
   "BusinessExpansionTechnologyUpgrade": "業務再擴張，技術升級，收購ASA交易伺服器，為客戶提供更優越的交易環境。",
-  "WCGMarketsAcquired": "WCG Markets 收購兩大知名金融機構”盈富Wealth Gold Group”及”酷極KUJI”，為未來發展奠下良好基礎。"
+  "WCGMarketsAcquired": "WCG Markets 收購兩大知名金融機構”盈富Wealth Gold Group”及”酷極KUJI”，為未來發展奠下良好基礎。",
+  "AMoreHumanizedUserCenter": "採用全新人工智能技術打造的更人性化的用戶中心，為客戶帶來極致的體驗。",
+  "AwardedAsThe": "獲得知名交易商監管評分機構[外匯天眼 WikiFX]評為[最佳金融科技和解決方案]公司。",
+  "ObtainedThePreciousMetals": "取得中華人民共和國香港特別行政區海關處[貴金屬及寶石交易商註冊]牌照。"
 }
