refactor(toplinks): change ib center to customer service

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -9,6 +9,7 @@
   "telegram": "Telegram",
   "Miduoke": "خدمة العملاء 1",
   "LiveChat": "خدمة العملاء 2",
+  "CustomerService": "خدمة العملاء ",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "تسجيل",
