--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -9,6 +9,7 @@
   "telegram": "Telegram",
   "Miduoke": "Customer service 1",
   "LiveChat": "Customer service 2",
+  "CustomerService": "Customer service",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "Client Portal",
