--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -9,6 +9,7 @@
   "telegram": "Telegram",
   "Miduoke": "Pelayanan pelanggan 1",
   "LiveChat": "Pelayanan pelanggan 2",
+  "CustomerService": "Pelayanan pelanggan",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "daftar",
