--- a/src/i18n/locales/th/common.json
+++ b/src/i18n/locales/th/common.json
@@ -9,6 +9,7 @@
   "telegram": "Telegram",
   "Miduoke": "ฝ่ายบริการลูกค้า1",
   "LiveChat": "บริการลูกค้า2",
+  "CustomerService": "บริการลูกค้า",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "พอร์ทัลลูกค้า",
