--- a/src/i18n/locales/zh/common.json
+++ b/src/i18n/locales/zh/common.json
@@ -9,6 +9,7 @@
   "telegram": "Telegram",
   "Miduoke": "線上客服1",
   "LiveChat": "線上客服2",
+  "CustomerService": "線上客服",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "存取款登入",
