--- a/src/i18n/locales/cn/common.json
+++ b/src/i18n/locales/cn/common.json
@@ -9,6 +9,7 @@
   "telegram": "Telegram",
   "Miduoke": "在线客服1",
   "LiveChat": "在线客服2",
+  "CustomerService": "在线客服",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "存取款登陆",
