--- a/src/i18n/locales/ms/common.json
+++ b/src/i18n/locales/ms/common.json
@@ -9,6 +9,7 @@
   "telegram": "Telegram",
   "Miduoke": "Khidmat Pelanggan 1",
   "LiveChat": "Khidmat Pelanggan 2",
+  "CustomerService": "Khidmat Pelanggan",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "daftar",
