--- a/src/i18n/locales/vi/common.json
+++ b/src/i18n/locales/vi/common.json
@@ -9,6 +9,7 @@
   "telegram": "Telegram",
   "Miduoke": "Dịch vụ khách hàng 1",
   "LiveChat": "Dịch vụ khách hàng 2",
+  "CustomerService": "Dịch vụ khách hàng",
   "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "Đăng ký",
