--- a/src/i18n/locales/en/home.json
+++ b/src/i18n/locales/en/home.json
@@ -22,6 +22,8 @@
   "LondonGoldLondonSilver": "London Gold & London Silver is a trading product provided by the International Financial Futures Exchange, with simple trading rules, T+0 operation.",
   "shortFundSettlementTime": "Short fund settlement time, and fast and safe online electronic transactions.",
   "accountOpening": "Account Opening",
+  "Calendar": "Economic Calendar",
+  "ByTradingView": "Provided by TradingView",
   "realTimeQuotation": "Real-time quotation of our trading products",
   "aVarietyOfProfessional": "A variety of professional chart analysis tools and technical indicators. You can freely set your own technical indicator parameters and time frame.",
   "investmentProductsAcross": "Investment products across the globe",
