--- a/src/i18n/locales/ms/home.json
+++ b/src/i18n/locales/ms/home.json
@@ -22,6 +22,8 @@
   "LondonGoldLondonSilver": "London Gold & London Silver adalah produk perdagangan yang disediakan oleh International Financial Futures Exchange, dengan peraturan perdagangan yang mudah, operasi T + 0.",
   "shortFundSettlementTime": "Waktu penyelesaian dana pendek, dan transaksi elektronik dalam talian yang cepat dan selamat.",
   "accountOpening": "Pembukaan Akaun",
+  "Calendar": "Kalendar kewangan",
+  "ByTradingView": "Disediakan oleh TradingView",
   "realTimeQuotation": "Petikan masa nyata produk perdagangan kami",
   "aVarietyOfProfessional": "Pelbagai alat analisis carta profesional dan petunjuk teknikal. Anda boleh menetapkan parameter dan jangka masa penunjuk teknikal anda secara bebas.",
   "investmentProductsAcross": "Produk pelaburan di seluruh dunia",
