--- a/src/i18n/locales/vi/home.json
+++ b/src/i18n/locales/vi/home.json
@@ -22,6 +22,8 @@
   "LondonGoldLondonSilver": "London Gold & London Silver là sản phẩm giao dịch được cung cấp bởi International Financial Futures Exchange, với các quy tắc giao dịch đơn giản, hoạt động T + 0.",
   "shortFundSettlementTime": "Thời gian giải quyết quỹ ngắn và giao dịch điện tử trực tuyến nhanh chóng và an toàn.",
   "accountOpening": "Mở tài khoản",
+  "Calendar": "lịch tài chính",
+  "ByTradingView": "Được cung cấp bởi TradingView",
   "realTimeQuotation": "Báo giá thời gian thực của các sản phẩm giao dịch",
   "aVarietyOfProfessional": "Một loạt các công cụ phân tích biểu đồ chuyên nghiệp và các chỉ báo kỹ thuật. Bạn có thể tự do thiết lập các thông số chỉ báo kỹ thuật và khung thời gian của riêng mình.",
   "investmentProductsAcross": "Sản phẩm đầu tư trên toàn cầu",
