--- a/src/i18n/locales/ar/home.json
+++ b/src/i18n/locales/ar/home.json
@@ -22,6 +22,8 @@
   "LondonGoldLondonSilver": "London Gold & London Silver هو منتج تداول مقدم من البورصة المالية الدولية للعقود الآجلة ، مع قواعد تداول بسيطة وعملية T + 0",
   "shortFundSettlementTime": "وقت قصير لتسوية الأموال ، معاملات إلكترونية سريعة وآمنة",
   "accountOpening": "فتح الحساب",
+  "Calendar": "التقويم المالي",
+  "ByTradingView": "مقدمة من TradingView",
   "realTimeQuotation": "عرض أسعار فوري في الوقت الفعلي لمنتجاتنا التجارية",
   "aVarietyOfProfessional": "مجموعة متنوعة من الأدوات الاحترافية لتحليل الرسوم البيانية والمؤشرات الفنية. يمكنك تعيين معلمات المؤشر الفني والإطار الزمني الخاصة بك بحرية",
   "investmentProductsAcross": "منتجات استثمارية من جميع أنحاء العالم",
