--- a/src/i18n/locales/ar/contactUs.json
+++ b/src/i18n/locales/ar/contactUs.json
@@ -46,7 +46,7 @@
   "WCGMarketsLtdObtained": "حصلت WCG Markets Ltd على ترخيص هيئة الخدمات المالية في سانت فنسنت وجزر غرينادين (SVGFSA) برقم 126087 قبل الميلاد 2020.",
   "establishedMalaysia": "إنشاء مكتب الاتصال الماليزي.",
   "setUpTaiwan": "قم بإعداد مكتب الاتصال التايواني.",
-  "aLeaderInTheIndustry": "انضم السيد Wu Guoqiang ، الرائد في الصناعة ، إلى قواه وهو مسؤول عن إدارة مراقبة ومراقبة المخاطر. السيد Wu حاصل على درجة الماجستير في التمويل وعدد من المؤهلات المهنية الدولية. شغل منصب كبير المتداولين ورئيس قسم إدارة المخاطر في العديد من البنوك العالمية.",
+  "aLeaderInTheIndustry": "انضم السيد Wu ، الرائد في الصناعة ، إلى قواه وهو مسؤول عن إدارة مراقبة ومراقبة المخاطر. السيد Wu حاصل على درجة الماجستير في التمويل وعدد من المؤهلات المهنية الدولية. شغل منصب كبير المتداولين ورئيس قسم إدارة المخاطر في العديد من البنوك العالمية.",
   "WCGMarketsLtdObtainedTheFINTRAC": "حصلت WCG Markets Ltd على ترخيص FINTRAC MSB من كندا ، والرقم هو M20282836.",
   "startCharityProjects": "بدء المشاريع الخيرية ، والمشاركة بنشاط في المشاريع الخيرية التعليمية والطبية ، والسعي لتصبح شركة مواطنة جيدة ورد الجميل للمجتمع.",
   "integrateAndUpdate": "دمج وتحديث العلامة التجارية. اعتماد شعارات وشعارات جديدة ، وكذلك إطلاق صفحة ويب جديدة بعدة لغات لتسهيل المستثمرين الدوليين.",
@@ -58,6 +58,5 @@
   "BusinessExpansionTechnologyUpgrade": "توسيع الأعمال ، ترقية التكنولوجيا ، الاستحواذ على خادم تداول ASA ، لتزويد العملاء ببيئة تداول أكثر تفوقًا.",
   "WCGMarketsAcquired": "استحوذت WCG Markets على مؤسستين ماليتين مشهورتين \"Wealth Gold Group\" و \"KUJI\" ، مما وضع أساسًا جيدًا للتنمية المستقبلية.",
   "AMoreHumanizedUserCenter": "يوفر مركز مستخدم أكثر إنسانية تم إنشاؤه باستخدام تقنية ذكاء اصطناعي جديدة التجربة النهائية للعملاء.",
-  "AwardedAsThe": "مُنحت على أنها شركة [أفضل تقنية وحلول مالية] من قبل وكالة التصنيف التنظيمي للتاجر المعروفة [Forex Forex WikiFX].",
-  "ObtainedThePreciousMetals": "الحصول على ترخيص [تسجيل تاجر المعادن الثمينة والأحجار الكريمة] من إدارة الجمارك في منطقة هونغ كونغ الإدارية الخاصة بجمهورية الصين الشعبية."
+  "AwardedAsThe": "مُنحت على أنها شركة [أفضل تقنية وحلول مالية] من قبل وكالة التصنيف التنظيمي للتاجر المعروفة [Forex Forex WikiFX]."
 }
