feat(nav): vi lang add nav depositBonus, update README, .env, links.ts, etc, add pdf file to AWS S3

--- a/src/i18n/locales/ar/header.json
+++ b/src/i18n/locales/ar/header.json
@@ -22,6 +22,7 @@
   "MT4WebTrader": "MT4 ويب تريدر",
   "MAMSystem": "نظام إدارة الحسابات المتعددة MAM",
   "notice": "إخطار",
+  "depositBonus": "Deposit Bonus",
   "abnormalTrade": "جارة غير طبيعية",
   "tradeDetails": "تفاصيل التجارة",
   "learnTrade": "تعلم التجارة",
