--- a/src/i18n/locales/th/header.json
+++ b/src/i18n/locales/th/header.json
@@ -22,6 +22,7 @@
   "MT4WebTrader": "MT4 เว็บเทรดเดอร์",
   "MAMSystem": "ระบบ MAM",
   "notice": "สังเกต",
+  "depositBonus": "Deposit Bonus",
   "abnormalTrade": "การค้าที่ผิดปกติ",
   "tradeDetails": "รายละเอียดการค้า",
   "learnTrade": "เรียนรู้การค้า",
