--- a/src/i18n/locales/vi/header.json
+++ b/src/i18n/locales/vi/header.json
@@ -22,6 +22,7 @@
   "MT4WebTrader": "Nhà giao dịch web MT4",
   "MAMSystem": "Hệ thống quản",
   "notice": "Thông báo giao dịch",
+  "depositBonus": "Tiền thưởng tiền gửi",
   "abnormalTrade": "Giao dịch bất thường",
   "tradeDetails": "Chi tiết giao dịch",
   "learnTrade": "Cách giao dịch",
