--- a/src/i18n/locales/en/header.json
+++ b/src/i18n/locales/en/header.json
@@ -22,6 +22,7 @@
   "MT4WebTrader": "MT4 Web Trader",
   "MAMSystem": "MAM System",
   "notice": "Notice",
+  "depositBonus": "Deposit Bonus",
   "abnormalTrade": "Abnormal Trade",
   "tradeDetails": "Trade Details",
   "learnTrade": "Learn Trade",
