--- a/src/i18n/locales/id/header.json
+++ b/src/i18n/locales/id/header.json
@@ -22,6 +22,7 @@
   "MT4WebTrader": "Pedagang Web MT4",
   "MAMSystem": "Sistem manajemen multi-akun MAM",
   "notice": "Perlu diketahui",
+  "depositBonus": "Deposit Bonus",
   "abnormalTrade": "Perdagangan Tidak Normal",
   "tradeDetails": "Detail perdagangan",
   "learnTrade": "belajar",
